Second commit: add new features and update existing activities/layouts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,8 @@
             android:exported="false"
             android:label="Face Scan Logs"
             android:parentActivityName=".DoctorDashboardActivity" />
+        <activity android:name=".CameraInstructionActivity" />
+        <activity android:name=".LicenseInstructionActivity" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
